<resources>
    <string name="android_ago_just_now">
        Just now
    </string>
    <string name="album_title_bookmarks">
        Bookmarks
    </string>
    <string name="album_title_history">
        History
    </string>
    <string name="album_title_home">
        Home
    </string>
    <string name="album_title_home_incog">
        Home(Incognito)
    </string>
    <string name="album_untitled">
        Untitled
    </string>
    <string name="clear_label">
        Clear
    </string>
    <string name="clear_menu_done_all">
        Done all
    </string>
    <string name="clear_title_quit">
        Clear when application exits
    </string>
    <string name="clear_title_bookmarks">
        Clear Bookmarks
    </string>
    <string name="clear_title_cache">
        Clear Cache
    </string>
    <string name="clear_title_cookie">
        Clear Cookies
    </string>
    <string name="clear_title_form_data">
        Clear Form Data
    </string>
    <string name="clear_title_history">
        Clear History
    </string>
    <string name="clear_title_passwords">
        Clear Passwords
    </string>
    <string name="dialog_title_hint">
        Input Title
    </string>
    <string name="dialog_sign_in_username">
        Username
    </string>
    <string name="dialog_sign_in_password">
        Password
    </string>
    <string name="dialog_button_positive">
        OK
    </string>
    <string name="dialog_button_negative">
        Cancel
    </string>
    <string name="dialog_button_custom">
        Custom
    </string>
    <string name="dialog_title_download">
        Do you want to download the file?
    </string>
    <string name="dialog_title_resubmission">
        Resubmit
    </string>
    <string name="dialog_title_warning">
        Warning
    </string>
    <string name="dialog_title_sign_in">
        Sign in
    </string>
    <string name="dialog_content_resubmission">
        Would you like to resubmit your data?
    </string>
    <string name="dialog_content_ssl_error">
        The certificate of the site is not trusted. Proceed anyway?
    </string>
    <string name="dialog_content_upload">
        Currently, File upload is only supported on Android 5.0 and Above.
    </string>
    <string name="list_empty">
        Current list is empty
    </string>
    <string name="main_menu_new_tab">
        New tab
    </string>
    <string name="main_menu_copy_link">
        Copy link
    </string>
    <string name="main_menu_download">
        Download
    </string>
    <string name="main_omnibox_input_hint">
        Search or type URL
    </string>
    <string name="main_relayout_ok" translatable="false">
        OK
    </string>
    <string name="main_relayout_done" translatable="false">
       Done
    </string>
    <string name="main_about_blank">
       Custom content will appear here
    </string>
    <string name="incogTextHeading">
       You\'ve gone incognito
    </string>
    <string name="incogdesc">
     Now you can browse privately,and other people who use this device won\'t see your activity. \nHowever,downloads and bookmarks will be saved.\nNinja fox won\'t save the following information:\n
      - Your browsing history\n
      - Cookies and site data\n
      - Information entered in forms
  </string>
    <string name="notification_content_holder">
        Click to View Pages
    </string>
    <string name="search_hint">
        Search
    </string>
    <string name="setting_label">
        Settings
    </string>
    <string name="download_settings_label">Download</string>
    <string name="setting_title_browser">
        Browser Settings
    </string>
    <string name="setting_title_location">
        Location
    </string>
    <string name="setting_summary_location">
        Allow websites to access your location
    </string>
    <string name="setting_title_data">
        Data
    </string>
    <string name="settings_clear_data">Clear Data</string>
    <string name="bookmarks_filename" translatable="false">
        NinjaBookmarks
    </string>
    <string name="setting_title_about">
        About
    </string>
    <string name="setting_title_download">
        Downlaods
    </string>
    <string name="setting_title_version">
        Version
    </string>
    <string name="setting_title_contact">
    Contact
    </string>
    <string name="setting_title_feedback">
    Feedback
    </string>
    <string name="setting_feedback_summary">
    Write us your valuable feedback
    </string>
    <string name="setting_title_default_browser">
    Set As Default Browser
    </string>
    <string name="setting_default_browser_summary">
    Set NinjaFox your Default Browser
    </string>
    <string name="privacy_policy">
        Privacy Policy
    </string>
    <string name="url_privacy" translatable="false">
        http://mojodigitech.com/privacy-policy-ninja-fox/
    </string>
    <string name="toast_add_bookmark_successful">
        Bookmark Successfully Added
    </string>
    <string name="toast_add_bookmark_failed">
        Can\'t add this page to bookmark
    </string>
    <string name="toast_add_to_home_successful">
        Successfully added to Home
    </string>
    <string name="toast_add_to_home_failed">
        Failed to add to Home
    </string>
    <string name="toast_add_whitelist_successful">
        Successfully added Domain
    </string>
    <string name="toast_already_exist_in_home">
        Already exist in home
    </string>
    <string name="toast_clear_successful">
        Successfully Cleared
    </string>
    <string name="toast_copy_successful">
        Successfully Copied
    </string>
    <string name="toast_delete_bookmark_successful">
        Successfully Deleted Bookmark
    </string>
    <string name="can_not_delete">
        Can\'t delete data
    </string>
    <string name="toast_delete_successful">
        Successfully Deleted
    </string>
    <string name="toast_domain_already_exists">
        Domain already exists
    </string>
    <string name="toast_double_taps_quit">
        Press again to exit
    </string>
    <string name="toast_add_token_successful" translatable="false">
        Successfully added Readability API
    </string>
    <string name="toast_export_bookmarks_successful" translatable="false">
        Exported bookmarks file at:&#160;
    </string>
    <string name="toast_export_bookmarks_failed" translatable="false">
        Failed to export Bookmarks
    </string>
    <string name="toast_export_whitelist_successful" translatable="false">
        Exported whitelist file at:&#160;
    </string>
    <string name="toast_export_whitelist_failed" translatable="false">
        Failed to export Whitelist
    </string>
    <string name="toast_import_bookmarks_successful" translatable="false">
        Imported bookmarks count:&#160;
    </string>
    <string name="toast_import_bookmarks_failed" translatable="false">
        Failed to import Bookmarks
    </string>
    <string name="toast_import_whitelist_successful" translatable="false">
        Imported domains count:&#160;
    </string>
    <string name="toast_import_whitelist_failed" translatable="false">
        Failed to import Whitelist
    </string>
    <string name="toast_relayout_successful" translatable="false">
        Successfully Relayout
    </string>
    <string name="toast_screenshot_successful" translatable="false">
        Saved screenshot at:&#160;
    </string>
    <string name="toast_screenshot_failed" translatable="false">
        Failed to capture Screenshot
    </string>
    <string name="whitelist_label" translatable="false">
        Whitelist
    </string>
    <string name="whitelist_menu_clear" translatable="false">
        Clear
    </string>
    <string name="whitelist_edit_hint" translatable="false">
        Domain
    </string>
    <string name="whitelist_add" translatable="false">
        Add
    </string>
    <string name="token_desc" translatable="false">
        Go to https://www.readability.com/developers/api to get your own Readability token
    </string>
    <string name="toast_token_empty" translatable="false">
        Please set Readability token
    </string>
    <string name="token_edit_hint" translatable="false">
        Readability token
    </string>
    <string name="whilelist_filename" translatable="false">
        NinjaWhitelist
    </string>
    <string name="dialog_se_hint" translatable="false">
        https://www.google.com/search?q=
    </string>
    <string name="dialog_ua_hint" translatable="false">
        Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/41.0.2228.0 Safari/537.36
    </string>
    <string name="toast_input_empty">
        You haven\'t input anything
    </string>
    <string name="toast_invalid_domain">
        Invalid domain
    </string>
    <string name="toast_load_error">
        Can\'t load this URL
    </string>
    <string name="toast_new_tab_successful">
        Successfully opened in a new tab
    </string>
    <string name="toast_open_file_manager_failed">
        Failed to open File Manager
    </string>
    <string name="toast_refresh_failed">
        Can\'t refresh this page
    </string>
    <string name="toast_share_failed">
        Can\'t share this page
    </string>
    <string name="share_using">
        Share using
    </string>
    <string name="invalid_link">
        invalid link
    </string>
    <string name="prompt_valid_url">
       please write valid url
   </string>
    <string name="promt_title">
        please write title and url
    </string>
    <string name="toast_start_download">
        Starting download
    </string>
    <string name="toast_wait_a_minute">
        Please wait for a moment
    </string>
    <string name="token_label">
        Token
    </string>
    <string name="token_add">
        Add
    </string>
    <string name="bookmark">Bookmaks</string>
    <string name="History">History</string>
    <string name="download_setting_both">Both</string>
    <string name="download_setting_wifi">Wifi only</string>
    <string name="download_setting_mobile">Mobile Data only</string>
    <string name="donwload_setiings_msg_wifi">your current settings does not allow download. please enable wifi</string>
    <string name="donwload_setiings_msg_mobile">your current settings does not allow download. please enable mobile data</string>
    <string name="download_dialog_title">Download Files on Data/Wifi</string>
    <string name="show_image_title">Show Images</string>
    <string name="show_image_always">Always</string>
    <string name="show_image_wifi">Only over Wi-Fi</string>
    <string name="show_image_blocked">Blocked</string>
    <string name="default_set_msg">tap Browser app and select ninja fox</string>
    <string name="gray_900">#212121</string>
    <string name="menu_new_incog_tab">New incog tab</string>
    <string name="menu_new_most_recent">Recent</string>
    <string name="menu_new_find_in_page">Find in page</string>
    <string name="clean_exit">Clean &amp; exit</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="set_default">Set default</string>
    <string name="ask_again">Don\'t ask me again</string>
    <string name="delete_desc">-History\n-Location info\n-Cached data\n-Cookies</string>
    <string name="clean_title">Clean the following\nBrowsing Data on exit?</string>
    <string name="set_password">Set password to secure block site access</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_password">Reset</string>
    <string name="signup2">SignUp</string>
    <string name="hint_name">Name</string>
    <string name="hint_mobile">Mobile</string>
    <string name="txt_done">Done</string>
    <string name="hint_email">Email</string>
    <string name="menu_new_sign_up">Sign Up</string>
</resources>