<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:weightSum="6"
    android:orientation="vertical"
    android:background="@color/sign_in_bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView
        android:id="@+id/toolbar"
        app:cardElevation="@dimen/padding_4dp"
        app:cardBackgroundColor="@color/clear_all_back_color"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <LinearLayout
            android:background="@drawable/ripple"
            android:id="@+id/backButton"
            android:padding="@dimen/layout_margin_2dp"
            android:gravity="left"
            android:layout_gravity="left|center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/ic_chevron_left_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:gravity="center"
                android:id="@+id/title_txt"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_18sp"
                android:text="@string/menu_new_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_weight="1.7"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:scaleType="fitXY"
                android:src="@drawable/signin_top"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></ImageView>
        </FrameLayout>

        <ImageView
            android:background="@drawable/img_border"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_launcher_round"
            android:layout_width="100dp"
            android:layout_height="100dp"></ImageView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="3.7"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_margin="@dimen/dp16"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:padding="@dimen/dp10"
                android:background="@drawable/layout_border"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:id="@+id/edit_Name"
                android:theme="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <EditText
                android:padding="@dimen/dp10"
                android:background="@drawable/layout_border"
                android:layout_marginTop="@dimen/dp8"
                android:hint="@string/hint_mobile"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:id="@+id/edit_mobile"
                android:theme="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>
            <EditText
                android:padding="@dimen/dp10"
                android:background="@drawable/layout_border"
                android:layout_marginTop="@dimen/dp8"
                android:hint="@string/hint_email"
                android:id="@+id/edit_email"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:theme="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <EditText
                android:padding="@dimen/dp10"
                android:background="@drawable/layout_border"
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/dp8"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:id="@+id/edit_password"
                android:theme="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <EditText
                android:padding="@dimen/dp10"
                android:background="@drawable/layout_border"
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/dp8"
                android:hint="@string/confirm_password"
                android:id="@+id/edit_cpasswor"
                android:theme="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <Button
                android:id="@+id/signUpButton"
                android:layout_marginTop="@dimen/dp12"
                android:text="@string/signup2"
                android:textAllCaps="false"
                android:textSize="@dimen/sp18"
                android:textColor="@color/white"
                android:background="@drawable/button_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_weight=".6"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ImageView
            android:background="@drawable/signin_bottom"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></ImageView>
    </RelativeLayout>
</LinearLayout>