<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_corner_shape_light">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_marginTop="@dimen/layout_margin_8dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_launcher_round"
                android:layout_width="@dimen/layout_width_50dp"
                android:layout_height="@dimen/layout_height_50dp" />
            <TextView
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_18sp"
                android:gravity="center"
                android:id="@+id/default_msg_txt"
                android:layout_marginTop="@dimen/layout_margin_8dp"
                android:text="@string/setting_default_browser_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <CheckBox
                android:textSize="@dimen/text_size_18sp"
                android:layout_marginTop="@dimen/layout_margin_8dp"
                android:id="@+id/checkBox"
                android:textColor="@color/black"
                android:buttonTint="@color/black"
                android:layout_width="wrap_content"
                android:text="@string/ask_again"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <View
            android:layout_marginTop="@dimen/layout_margin_16dp"
            android:background="@color/gray_600"
            android:layout_marginLeft="@dimen/layout_margin_8dp"
            android:layout_marginRight="@dimen/layout_margin_8dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"></View>

        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_40dp">
            <TextView
                android:id="@+id/cancel_Txt"
                android:background="@drawable/ripple"
                android:padding="@dimen/layout_margin_8dp"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:layout_width="0dp"
                android:textSize="@dimen/text_size_16sp"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/set_default_Txt"
                android:background="@drawable/ripple"
                android:textColor="@color/title_back_color"
                android:padding="@dimen/layout_margin_8dp"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_16sp"
                android:text="@string/set_default"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>


</FrameLayout>